syntax = "proto3";
package airbloc.rpc.v1;

option go_package = "github.com/airbloc/airbloc-go/proto/rpc/v1/server";

import "google/protobuf/empty.proto";

service User {
    rpc GetData(UserId) returns (GetDataReponse);
    rpc GetDataIds(UserId) returns (GetDataIdsResponse);
}

message UserId {
    string userId = 1;
}

message GetDataReponse {
    message Data {
        int64 collectedAt = 1;
        int64 ingestedAt = 2;
        string payload = 3;
    }

    message Collection {
        string id = 1;
        string name = 2;
        repeated Data data = 3;
    }

    repeated Collection collections = 1;
}

message GetDataIdsResponse{
    message DataInfo {
        string id = 1;
        int64 ingestedAt = 2;
    }

    message Collection {
        string collectionId = 3;
        repeated DataInfo dataInfoes = 4;
    }
    repeated Collection collections = 1;
}
